--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,15 @@
 name: Kazuya Otani Blog
 markdown: kramdown
 permalink: /blog/:year/:month/:day/:title
+collections:
+  notes:
+    output: true
+    permalink: /notes/:path
+
+defaults:
+  - scope:
+      path: ""
+      type: notes
+    values:
+      layout: page
+      use_math: true
