--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 name: Kazuya Otani Blog
-# markdown: kramdown
-markdown: maruku
+markdown: kramdown
+# markdown: maruku
 markdown_ext: markdown,mkd,mkdn,md
 permalink: /blog/:year/:month/:day/:title
 collections:
